testsuite/bsc.interra/bugs/bugID169/Test.bs.bsc-out.expected
checking package dependencies
compiling Test.bs
Error: "Test.bs", line 17, column 25: (T0008)
  Unbound type variable `a'
